MDEV-4919: Packets out of order on a SELECT after calling a procedure with DELETE .. RETURNING - Let sp_get_flags_for_command() set sp_head::MULTI_RESULTS for DELETE ... RETURNING,   like it does for all statements that return a resultset.